* Bug #35654: fix wizard images, adapt header title in wizard mode
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54683 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.1.15-1) unstable; urgency=low
+
+  * Bug #35654: fix wizard images, adapt header title in wizard mode
+
+ -- Florian Best <best@univention.de>  Mon, 20 Oct 2014 18:56:49 +0200
+
 univention-system-setup (8.1.14-5) unstable; urgency=low
 
   * removed last commit (Bug #36224) 
