--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-adtakeover (2.0.3-1) unstable; urgency=low
+
+  * Bug #35654: move help text into nav area
+
+ -- Florian Best <best@univention.de>  Mon, 20 Oct 2014 20:13:46 +0200
+
 univention-management-console-module-adtakeover (2.0.2-1) unstable; urgency=low
 
   * Bug #35654: move module into domain category
