--- a/management/univention-management-console-frontend-theme/debian/changelog
+++ b/management/univention-management-console-frontend-theme/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend-theme (0.0.54-1) unstable; urgency=low
+
+  * Bug #35654: add more generic umcDynamicHeight
+
+ -- Florian Best <best@univention.de>  Mon, 20 Oct 2014 21:55:58 +0200
+
 univention-management-console-frontend-theme (0.0.53-1) unstable; urgency=low
 
   * Bug #35654: appliance mode / headless styling
