--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.1.57-1) unstable; urgency=low
+
+  * Bug #35654: show app icons again
+
+ -- Florian Best <best@univention.de>  Mon, 20 Oct 2014 21:28:48 +0200
+
 univention-management-console-frontend (4.1.56-1) unstable; urgency=medium
 
   * Bug #35654: adjust UCS activiation icon in StartupWizard
