* Bug #35654: move close button into head area, make log view scrollable
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54691 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (10.0.19-1) unstable; urgency=low
+
+  * Bug #35654: move close button into head area, make log view scrollable
+
+ -- Florian Best <best@univention.de>  Mon, 20 Oct 2014 22:17:18 +0200
+
 univention-updater (10.0.18-1) unstable; urgency=low
 
   * Block update if old univention-horde4 is installed (Bug #36237) 
