--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.172-3) unstable; urgency=low
+
+  * Bug #36108: added missing dependencies
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Mon, 20 Oct 2014 21:24:22 +0200
+
 ucs-test (4.0.172-2) unstable; urgency=medium
 
   * 53_samba-common/05domain-join-ntlm-auth: added debug (Bug #35335)
