Bug #35088: disabled some checks due to Bug #36210
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@54693 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,6 +1,7 @@
 ucs-test (4.0.172-3) unstable; urgency=low
 
   * Bug #36108: added missing dependencies
+  * Bug #35088: disabled some checks due to bug #36210
 
  -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Mon, 20 Oct 2014 21:24:22 +0200
 
