--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,11 @@
+univention-management-console-frontend (4.1.58-1) unstable; urgency=medium
+
+  Bug #35654:
+  * Allow bootstrap classes to be set for nav/main containers in Page
+  * Fix size of PasswordInputBox
+
+ -- Alexander Kläser <klaeser@univention.de>  Tue, 21 Oct 2014 00:27:25 +0200
+
 univention-management-console-frontend (4.1.57-1) unstable; urgency=low
 
   * Bug #35654: show app icons again
