--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,11 @@
+univention-system-setup (8.1.16-1) unstable; urgency=medium
+
+  Bug #35654:
+  * Add custom bootstrap classes for wizard pages
+  * Remove obsolete _setupPasswordBoxes()
+
+ -- Alexander Kläser <klaeser@univention.de>  Tue, 21 Oct 2014 00:34:17 +0200
+
 univention-system-setup (8.1.15-1) unstable; urgency=low
 
   * Bug #35654: fix wizard images, adapt header title in wizard mode
