--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.1.17-1) unstable; urgency=medium
+
+  * Bug #35654: some style adaptations
+
+ -- Alexander Kläser <klaeser@univention.de>  Tue, 21 Oct 2014 01:45:25 +0200
+
 univention-system-setup (8.1.16-1) unstable; urgency=medium
 
   Bug #35654:
