* Bug #35654: adjust styling of dijit/form/Select widget
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54698 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/debian/changelog
+++ b/management/univention-management-console-frontend-theme/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend-theme (0.0.56-1) unstable; urgency=medium
+
+  * Bug #35654: adjust styling of dijit/form/Select widget
+
+ -- Alexander Kläser <klaeser@univention.de>  Tue, 21 Oct 2014 01:47:19 +0200
+
 univention-management-console-frontend-theme (0.0.55-1) unstable; urgency=medium
 
   Bug #35654:
