--- a/management/univention-management-console-frontend-theme/debian/changelog
+++ b/management/univention-management-console-frontend-theme/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend-theme (0.0.57-1) unstable; urgency=medium
+
+  * Bug #35654: adjust gallery pane icon margins
+
+ -- Alexander Kläser <klaeser@univention.de>  Tue, 21 Oct 2014 02:02:05 +0200
+
 univention-management-console-frontend-theme (0.0.56-1) unstable; urgency=medium
 
   * Bug #35654: adjust styling of dijit/form/Select widget
