* Bug #35654: fix sticky module header
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54700 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.1.59-1) unstable; urgency=medium
+
+  * Bug #35654: fix sticky module header
+
+ -- Alexander Kläser <klaeser@univention.de>  Tue, 21 Oct 2014 02:44:57 +0200
+
 univention-management-console-frontend (4.1.58-1) unstable; urgency=medium
 
   Bug #35654:
