* Added some more tools to the UCS 4.0 DVD (Bug #36050)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54701 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-dvd/debian/changelog
+++ b/base/univention-dvd/debian/changelog
@@ -1,3 +1,9 @@
+univention-dvd (0.2.6-1) unstable; urgency=medium
+
+  * Added some more tools to the UCS 4.0 DVD (Bug #36050)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 21 Oct 2014 08:22:37 +0200
+
 univention-dvd (0.2.5-2) unstable; urgency=low
 
   * Added several packages for horde App (Bug #36237) 
