Bug #36215: disabled some checks due to Bug #36210
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@54702 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.172-4) unstable; urgency=low
+
+  * Bug #36215: disabled some checks due to bug #36210
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Tue, 21 Oct 2014 09:08:30 +0200
+
 ucs-test (4.0.172-3) unstable; urgency=low
 
   * Bug #36108: added missing dependencies
