* Download packages for Appliance mode if system setup wasn't   successful (Bug #36038)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54703 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,10 @@
+univention-system-setup (8.1.18-1) unstable; urgency=medium
+
+  * Download packages for Appliance mode if system setup wasn't
+    successful (Bug #36038)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 21 Oct 2014 09:33:28 +0200
+
 univention-system-setup (8.1.17-1) unstable; urgency=medium
 
   * Bug #35654: some style adaptations
