fixed preup (Bug #36237)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54704 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (10.0.20-1) unstable; urgency=low
+
+  * fixed preup (Bug #36237) 
+
+ -- Felix Botner <botner@univention.de>  Tue, 21 Oct 2014 09:37:59 +0200
+
 univention-updater (10.0.19-1) unstable; urgency=low
 
   * Bug #35654: move close button into head area, make log view scrollable
