--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (5.0.34-1) unstable; urgency=low
+
+  * Bug #35088: added 25_script_lock_expired_accounts
+  * Bug #36215: added 25_script_lock_expired_passwords
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Fri, 17 Oct 2014 14:21:47 +0200
+
 ucs-test (5.0.33-5) unstable; urgency=medium
 
   * Fix typo (Bug #35319)
