--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (5.0.34-2) unstable; urgency=low
+
+  * Bug #35088: disabled some checks due to bug #36210
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Tue, 21 Oct 2014 09:37:41 +0200
+
 ucs-test (5.0.34-1) unstable; urgency=low
 
   * Bug #35088: added 25_script_lock_expired_accounts
