Bug #36215: disabled some checks due to Bug #36210
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54707 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,8 +1,14 @@
+ucs-test (5.0.34-3) unstable; urgency=low
+
+  * Bug #36215: disabled some checks due to bug #36210
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Tue, 21 Oct 2014 09:08:30 +0200
+
 ucs-test (5.0.34-2) unstable; urgency=low
 
   * Bug #35088: disabled some checks due to bug #36210
 
- -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Tue, 21 Oct 2014 09:37:41 +0200
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Tue, 21 Oct 2014 09:07:41 +0200
 
 ucs-test (5.0.34-1) unstable; urgency=low
 
