--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.173-1) unstable; urgency=low
+
+  * Bug #35900: using expiry date from ldap after object creation instead of using the value sent with create
+
+ -- Ammar Najjar <najjar@univention.de>  Tue, 21 Oct 2014 09:45:26 +0200
+
 ucs-test (4.0.172-4) unstable; urgency=low
 
   * Bug #36215: disabled some checks due to bug #36210
