--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.1.60-1) unstable; urgency=medium
+
+  * Bug #35654: remove duplicated reference to dojo/on in umc/widgets/Grid.js
+
+ -- Alexander Kläser <klaeser@univention.de>  Tue, 21 Oct 2014 11:21:42 +0200
+
 univention-management-console-frontend (4.1.59-1) unstable; urgency=medium
 
   * Bug #35654: fix sticky module header
