--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.1.19-1) unstable; urgency=medium
+
+  * Download packages before deleting sources.list (Bug #36038)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 21 Oct 2014 12:02:15 +0200
+
 univention-system-setup (8.1.18-1) unstable; urgency=medium
 
   * Download packages for Appliance mode if system setup wasn't
