Added phonon-backend-xine to maintained (Bug #36224)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54719 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-dvd/debian/changelog
+++ b/base/univention-dvd/debian/changelog
@@ -1,3 +1,9 @@
+univention-dvd (0.2.7-1) unstable; urgency=low
+
+  * Added phonon-backend-xine to maintained (Bug #36224) 
+
+ -- Felix Botner <botner@univention.de>  Tue, 21 Oct 2014 12:22:04 +0200
+
 univention-dvd (0.2.6-1) unstable; urgency=medium
 
   * Added some more tools to the UCS 4.0 DVD (Bug #36050)
