--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,10 @@
+univention-virtual-machine-manager-daemon (4.0.3-11) unstable; urgency=low
+
+  * Always create secure EC2 connection if not specified, removed option
+    from connection wizard (Bug #36152) 
+
+ -- Erik Damrose <damrose@univention.de>  Tue, 21 Oct 2014 12:22:11 +0200
+
 univention-virtual-machine-manager-daemon (4.0.3-10) unstable; urgency=low
 
   * Add dialog alert if no virtualization infrastructure is configured (Bug
