* Don't use the auto reconnect feature of python-ldap/univention.uldap   for the S4 connection, reestablished connection is invalid in case   samba has been restartet (Bug #36227).
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54723 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,11 @@
+univention-s4-connector (9.0.15-1) unstable; urgency=medium
+
+  * Don't use the auto reconnect feature of python-ldap/univention.uldap
+    for the S4 connection, reestablished connection is invalid in case
+    samba has been restartet (Bug #36227).
+
+ -- Arvid Requate <requate@univention.de>  Tue, 21 Oct 2014 13:10:01 +0200
+
 univention-s4-connector (9.0.14-1) unstable; urgency=low
 
   * fixed sync_mode check in post_con_modify_functions (Bug #35251) 
