--- a/management/univention-dojo/debian/changelog
+++ b/management/univention-dojo/debian/changelog
@@ -1,3 +1,9 @@
+univention-dojo (8.0.2-1) unstable; urgency=medium
+
+  * Bug #35654: adjust handling of CSS classes for dijit/ProgressBar
+
+ -- Alexander Kläser <klaeser@univention.de>  Tue, 21 Oct 2014 13:29:52 +0200
+
 univention-dojo (8.0.1-1) unstable; urgency=medium
 
   * Bug #35654: add additional CSS classes to dijit/ProgressBar
