--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (5.0.36-1) unstable; urgency=medium
+
+  * Fix spelling of group_randomnameme (collateral to Bug #36227)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 21 Oct 2014 13:33:33 +0200
+
 ucs-test (5.0.35-1) unstable; urgency=low
 
   * Bug #35900: using expiry date from ldap after object creation instead of using the value sent with create
