--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (5.0.36-2) unstable; urgency=medium
+
+  * New test 52_s4connector/006reconnect_after_samba_restart (Bug #36227)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 21 Oct 2014 13:42:31 +0200
+
 ucs-test (5.0.36-1) unstable; urgency=medium
 
   * Fix spelling of group_randomnameme (collateral to Bug #36227)
