* Re-create host keys and postfix DH keys (Bug #36033) * Only download packages in startxwithfirefox if no packages are   available (Bug #36038)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54733 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,11 @@
+univention-system-setup (8.1.20-1) unstable; urgency=medium
+
+  * Re-create host keys and postfix DH keys (Bug #36033)
+  * Only download packages in startxwithfirefox if no packages are
+    available (Bug #36038)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 21 Oct 2014 14:35:10 +0200
+
 univention-system-setup (8.1.19-1) unstable; urgency=medium
 
   * Download packages before deleting sources.list (Bug #36038)
