added grub/gfxmode=text for xen HVM installations (Bug #30978)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54735 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-grub/debian/changelog
+++ b/base/univention-grub/debian/changelog
@@ -1,3 +1,9 @@
+univention-grub (8.0.3-7) unstable; urgency=low
+
+  * added grub/gfxmode=text for xen HVM installations (Bug #30978) 
+
+ -- Felix Botner <botner@univention.de>  Tue, 21 Oct 2014 15:32:12 +0200
+
 univention-grub (8.0.3-6) unstable; urgency=low
 
   * new menu colors (Bug #35934) 
