--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,10 @@
+univention-system-setup (8.1.20-2) unstable; urgency=low
+
+  * Bug #35499: Adapt icons, layout
+  * Bug #33839: Use absolute paths
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 21 Oct 2014 15:46:44 +0200
+
 univention-system-setup (8.1.20-1) unstable; urgency=medium
 
   * Re-create host keys and postfix DH keys (Bug #36033)
