--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.1.20-3) unstable; urgency=medium
+
+  * Bug #35654: fix InterfaceWizard
+
+ -- Florian Best <best@univention.de>  Tue, 21 Oct 2014 16:08:22 +0200
+
 univention-system-setup (8.1.20-2) unstable; urgency=low
 
   * Bug #35499: Adapt icons, layout
