--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,10 @@
+univention-system-setup (8.1.21-1) unstable; urgency=medium
+
+  * Re-adde accidentally removed part from the system-setup-boot
+    postinst (Bug #36038)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 21 Oct 2014 16:18:33 +0200
+
 univention-system-setup (8.1.20-3) unstable; urgency=medium
 
   * Bug #35654: fix InterfaceWizard
