--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,10 @@
+univention-ldap (11.0.7-3) unstable; urgency=medium
+
+  * Only allow activation of the ppolicy overlay in case backend is mdb
+    (Bug #31907)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 21 Oct 2014 17:13:32 +0200
+
 univention-ldap (11.0.7-2) unstable; urgency=medium
 
   * Remove scalix.schema (Bug #28693)
