* Added python-univention to the pre depends package list and   add python2.7 to the supported debian version (Bug #36229)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54753 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,10 @@
+univention-updater (10.0.21-1) unstable; urgency=medium
+
+  * Added python-univention to the pre depends package list and
+    add python2.7 to the supported debian version (Bug #36229)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 21 Oct 2014 17:27:50 +0200
+
 univention-updater (10.0.20-1) unstable; urgency=low
 
   * fixed preup (Bug #36237) 
