* Get rid of 'rootdn is always granted unlimited privileges' messages   on DC Master (Bug #31907)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54755 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,10 @@
+univention-ldap (11.0.7-4) unstable; urgency=medium
+
+  * Get rid of 'rootdn is always granted unlimited privileges' messages
+    on DC Master (Bug #31907)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 21 Oct 2014 17:32:42 +0200
+
 univention-ldap (11.0.7-3) unstable; urgency=medium
 
   * Only allow activation of the ppolicy overlay in case backend is mdb
