--- a/management/univention-directory-replication/debian/changelog
+++ b/management/univention-directory-replication/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-replication (8.0.2-3) unstable; urgency=medium
+
+  * Bug #31907: Filter out uppercase operational ppolicy attributes
+
+ -- Arvid Requate <requate@univention.de>  Tue, 21 Oct 2014 17:38:32 +0200
+
 univention-directory-replication (8.0.2-2) unstable; urgency=medium
 
   * Bug #31907: Work around ITS#4025
