* Bug #35499: Adapt icons, layout
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54757 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,6 +1,12 @@
+univention-system-setup (8.1.21-2) unstable; urgency=low
+
+  * Bug #35499: Adapt icons, layout
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 21 Oct 2014 17:41:43 +0200
+
 univention-system-setup (8.1.21-1) unstable; urgency=medium
 
-  * Re-adde accidentally removed part from the system-setup-boot
+  * Re-added accidentally removed part from the system-setup-boot
     postinst (Bug #36038)
 
  -- Stefan Gohmann <gohmann@univention.de>  Tue, 21 Oct 2014 16:18:33 +0200
