--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-adtakeover (2.0.4-1) unstable; urgency=medium
+
+  * Bug #35654: fix wizard images
+
+ -- Florian Best <best@univention.de>  Tue, 21 Oct 2014 17:35:11 +0200
+
 univention-management-console-module-adtakeover (2.0.3-1) unstable; urgency=low
 
   * Bug #35654: move help text into nav area
