--- a/base/univention-dvd/debian/changelog
+++ b/base/univention-dvd/debian/changelog
@@ -1,3 +1,9 @@
+univention-dvd (0.2.7-2) unstable; urgency=low
+
+  * Added several packages for zarafa/z-push App (Bug #36204) 
+
+ -- Felix Botner <botner@univention.de>  Tue, 21 Oct 2014 18:02:54 +0200
+
 univention-dvd (0.2.7-1) unstable; urgency=low
 
   * Added phonon-backend-xine to maintained (Bug #36224) 
