Replace console-tools with kbd in postup (Bug #36224)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54762 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (10.0.22-1) unstable; urgency=low
+
+  * Replace console-tools with kbd in postup (Bug #36224)
+
+ -- Felix Botner <botner@univention.de>  Tue, 21 Oct 2014 18:07:12 +0200
+
 univention-updater (10.0.21-1) unstable; urgency=medium
 
   * Added python-univention to the pre depends package list and
