Bug #35654: fix wizard images
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54764 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (9.0.7-1) unstable; urgency=medium
+
+  * Bug #35654: fix wizard images
+
+ -- Florian Best <best@univention.de>  Tue, 21 Oct 2014 18:25:07 +0200
+
 univention-ad-connector (9.0.6-1) unstable; urgency=medium
 
   * Catch ADNotAvailable in connection testing (Bug #35701)
