Bug #35654: styling progressbar, calendar
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54765 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/debian/changelog
+++ b/management/univention-management-console-frontend-theme/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend-theme (0.0.58-1) precise; urgency=low
+
+  * Bug #35654: styling progressbar, calendar
+
+ -- Johannes Keiser <keiser@univention.de>  Tue, 21 Oct 2014 18:25:37 +0200
+
 univention-management-console-frontend-theme (0.0.57-1) unstable; urgency=medium
 
   * Bug #35654: adjust gallery pane icon margins
