--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (5.0.36-4) unstable; urgency=medium
+
+  * Bug #31907: Ppolicy with UDM lockout only works with mdb backend
+
+ -- Arvid Requate <requate@univention.de>  Tue, 21 Oct 2014 18:32:58 +0200
+
 ucs-test (5.0.36-3) unstable; urgency=medium
 
   * Adjust test for Bug #31907
