--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (11.0.7-5) unstable; urgency=medium
+
+  * Grant DCs write access to sambaAcctFlags (Bug #31907)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 21 Oct 2014 18:46:10 +0200
+
 univention-ldap (11.0.7-4) unstable; urgency=medium
 
   * Get rid of 'rootdn is always granted unlimited privileges' messages
