--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.1.22-1) unstable; urgency=medium
+
+  * startxwithfirefox: download packages (Bug #36038)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 21 Oct 2014 20:45:43 +0200
+
 univention-system-setup (8.1.21-2) unstable; urgency=low
 
   * Bug #35499: Adapt icons, layout
