--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (5.0.36-5) unstable; urgency=medium
+
+  * run net rpc info against localhost (Bug #36208)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 21 Oct 2014 20:58:35 +0200
+
 ucs-test (5.0.36-4) unstable; urgency=medium
 
   * Bug #31907: Ppolicy with UDM lockout only works with mdb backend
