--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (10.0.23.1) unstable; urgency=medium
+
+  * Change preup package order (Bug #36229)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 21 Oct 2014 21:47:47 +0200
+
 univention-updater (10.0.22-1) unstable; urgency=low
 
   * Replace console-tools with kbd in postup (Bug #36224)
