Bug #35654: * Handle additional size property for syntax classes * Replace umc.tools.inheritsFrom() with widget.isInstanceOf()
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54777 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,11 @@
+univention-management-console-module-udm (5.1.8-1) unstable; urgency=medium
+
+  Bug #35654:
+  * Handle additional size property for syntax classes
+  * Replace umc.tools.inheritsFrom() with widget.isInstanceOf()
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 22 Oct 2014 02:25:03 +0200
+
 univention-management-console-module-udm (5.1.7-1) unstable; urgency=medium
 
   * Bug #35654: adjust styling of license dialogs
