Bug #35654: * adjust MultiInput to work correctly w.r.t. responsive design * remove obsolete code
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54779 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,11 @@
+univention-management-console-frontend (4.1.61-1) unstable; urgency=medium
+
+  Bug #35654:
+  * adjust MultiInput to work correctly w.r.t. responsive design
+  * remove obsolete code
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 22 Oct 2014 03:57:47 +0200
+
 univention-management-console-frontend (4.1.60-2) unstable; urgency=medium
 
   * Bug #35654: adapt module header styling
