* Bug #35654: adapt drop down button icon
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54780 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/debian/changelog
+++ b/management/univention-management-console-frontend-theme/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend-theme (0.0.60-1) unstable; urgency=medium
+
+  * Bug #35654: adapt drop down button icon
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 22 Oct 2014 04:05:05 +0200
+
 univention-management-console-frontend-theme (0.0.59-1) unstable; urgency=medium
 
   Bug #35654:
