--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.1.23-1) unstable; urgency=medium
+
+  * Bug #35499: minor adjustment of page image positioning 
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 22 Oct 2014 04:29:29 +0200
+
 univention-system-setup (8.1.22-1) unstable; urgency=medium
 
   * startxwithfirefox: download packages (Bug #36038)
