--- a/management/univention-management-console-frontend-theme/debian/changelog
+++ b/management/univention-management-console-frontend-theme/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend-theme (0.0.60-2) unstable; urgency=medium
+
+  * Bug #35654: fixed typo 
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 22 Oct 2014 09:12:28 +0200
+
 univention-management-console-frontend-theme (0.0.60-1) unstable; urgency=medium
 
   * Bug #35654: adapt drop down button icon
