--- a/management/univention-management-console-module-mrtg/debian/changelog
+++ b/management/univention-management-console-module-mrtg/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-mrtg (3.1.4-1) unstable; urgency=medium
+
+  * Removed terminal server sessions (Bug #34029)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 22 Oct 2014 09:46:21 +0200
+
 univention-management-console-module-mrtg (3.1.3-1) unstable; urgency=low
 
   * Bug #35654: left align title
