--- a/base/univention-maintenance/debian/changelog
+++ b/base/univention-maintenance/debian/changelog
@@ -1,3 +1,9 @@
+univention-maintenance (7.0.1-1) unstable; urgency=medium
+
+  * Removed terminal server sessions (Bug #34029)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 22 Oct 2014 09:47:09 +0200
+
 univention-maintenance (7.0.0-2) unstable; urgency=low
 
   * Preferr univention-mail-posfix as default-mta (Bug #35525)
