Bug #36214:copy wait_for_s4connector() to univention/testing/ucs_samba.py
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@54793 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.174-1) unstable; urgency=low
+
+  * Bug #36214: copy wait_for_s4connector() to univention/testing/ucs_samba.py
+
+ -- Ammar Najjar <najjar@univention.de>  Wed, 22 Oct 2014 11:04:27 +0200
+
 ucs-test (4.0.173-1) unstable; urgency=low
 
   * Bug #35900: using expiry date from ldap after object creation instead of using the value sent with create
