Remove gdm packages and favour kdm in postup (Bug #35936)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54794 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,4 +1,10 @@
-univention-updater (10.0.23.1) unstable; urgency=medium
+univention-updater (10.0.24-1) unstable; urgency=low
+
+  * Remove gdm packages and favour kdm in postup (Bug #35936)
+
+ -- Felix Botner <botner@univention.de>  Wed, 22 Oct 2014 11:07:03 +0200
+
+univention-updater (10.0.23-1) unstable; urgency=medium
 
   * Change preup package order (Bug #36229)
 
