--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.1.24-3) unstable; urgency=low
+
+  * Bug #35653: Fix checking existing domain
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Wed, 22 Oct 2014 11:05:09 +0200
+
 univention-system-setup (8.1.24-2) unstable; urgency=medium
 
   * Bug #35654: fix dpkg --compare-versions
