Bug #35654: move install button to the left
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54802 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-appcenter (4.1.11-1) unstable; urgency=medium
+
+  * Bug #35654: move install button to the left
+
+ -- Florian Best <best@univention.de>  Wed, 22 Oct 2014 12:32:09 +0200
+
 univention-management-console-module-appcenter (4.1.10-1) unstable; urgency=low
 
   * Bug #35654: convert svgz → svg
