--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.1.62-1) unstable; urgency=medium
+
+  * Bug #35654: refresh headerButtons on update
+
+ -- Florian Best <best@univention.de>  Wed, 22 Oct 2014 12:33:14 +0200
+
 univention-management-console-frontend (4.1.61-1) unstable; urgency=medium
 
   Bug #35654:
