Update to UCS 4.0 (Bug #36115)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54808 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/packaging/univention-directory-manager-module-example/debian/changelog
+++ b/packaging/univention-directory-manager-module-example/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-module-example (4.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #36115) 
+
+ -- Felix Botner <botner@univention.de>  Wed, 22 Oct 2014 13:05:31 +0200
+
 univention-directory-manager-module-example (3.0.1-2) unstable; urgency=low
 
   * Modify refresh-i18n to use bash, fixes build since ucslint detects a
