Update to UCS 4.0 (Bug #36115)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54809 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/packaging/univention-package-template/debian/changelog
+++ b/packaging/univention-package-template/debian/changelog
@@ -1,3 +1,9 @@
+univention-multiarch-links (2.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #36115) 
+
+ -- Felix Botner <botner@univention.de>  Wed, 22 Oct 2014 13:09:55 +0200
+
 univention-multiarch-links (1.0.0-1) unstable; urgency=low
 
   * Initial Release (Bug #33835)
