--- a/packaging/univention-package-template-python/debian/changelog
+++ b/packaging/univention-package-template-python/debian/changelog
@@ -1,3 +1,9 @@
+univention-package-template-python (3.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #36115)
+
+ -- Felix Botner <botner@univention.de>  Wed, 22 Oct 2014 13:11:14 +0200
+
 univention-package-template-python (2.0.0-1) unstable; urgency=low
 
   * Build only for Python 2.6 (Bug #26852)
