Update to UCS 4.0 (Bug #36115)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54811 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/packaging/univention-ucs-translation-template/debian/changelog
+++ b/packaging/univention-ucs-translation-template/debian/changelog
@@ -1,3 +1,9 @@
+univention-ucs-translation-template (2.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #36115) 
+
+ -- Felix Botner <botner@univention.de>  Wed, 22 Oct 2014 13:13:47 +0200
+
 univention-ucs-translation-template (1.0.0-2) unstable; urgency=low
 
   * Small code improvements (Bug #31559) 
