Bug #36266: fix firefox issues after logoff → reload page as GET without using the cache to prevent pop up asking for POST resend → don't disable password field
Bug #35654: try to fix login dialog in firefox

Bug #36266: fix firefox issues after logoff

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54816 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,12 @@
+univention-management-console-frontend (4.1.63-1) unstable; urgency=medium
+
+  * Bug #36266: fix firefox issues after logoff
+   → reload page as GET without using the cache to prevent pop up asking for
+   POST resend
+   → don't disable password field
+
+ -- Florian Best <best@univention.de>  Wed, 22 Oct 2014 13:55:26 +0200
+
 univention-management-console-frontend (4.1.62-1) unstable; urgency=medium
 
   * Bug #35654: refresh headerButtons on update
