* Bug #33241: Fix permissions on pidlock file
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54826 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console/debian/changelog
+++ b/management/univention-management-console/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console (7.1.12-3) unstable; urgency=low
+
+  * Bug #33241: Fix permissions on pidlock file
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Wed, 22 Oct 2014 15:02:42 +0200
+
 univention-management-console (7.1.12-2) unstable; urgency=low
 
   * Bug #33241: Do not use umask 0077 for UMC
