Autoremove packages in postup (Bug #36265)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54827 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (10.0.25-1) unstable; urgency=low
+
+  * Autoremove packages in postup (Bug #36265) 
+
+ -- Felix Botner <botner@univention.de>  Wed, 22 Oct 2014 15:02:53 +0200
+
 univention-updater (10.0.24-1) unstable; urgency=low
 
   * Remove gdm packages and favour kdm in postup (Bug #35936)
