* Remove useless filter option "cloud connection" (Bug #36148) * Use "cloud instances" as default filter if only cloud connections are configured (Bug #36138)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54830 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,11 @@
+univention-virtual-machine-manager-daemon (4.0.3-14) unstable; urgency=low
+
+  * Remove useless filter option "cloud connection" (Bug #36148)
+  * Use "cloud instances" as default filter if only cloud connections
+    are configured (Bug #36138)
+
+ -- Erik Damrose <damrose@univention.de>  Wed, 22 Oct 2014 15:58:20 +0200
+
 univention-virtual-machine-manager-daemon (4.0.3-13) unstable; urgency=low
 
   * Fix password and api key field handling in UMC wizard (Bug #36153) 
