Bug #35654: * ensure correct positioning of header elements * remove obsolete css directory
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54831 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,6 +1,8 @@
 univention-management-console-frontend (4.1.64-1) unstable; urgency=medium
 
-  * Bug #35654: ensure correct positioning of header elements
+  Bug #35654:
+  * ensure correct positioning of header elements
+  * remove obsolete css directory
 
  -- Alexander Kläser <klaeser@univention.de>  Wed, 22 Oct 2014 15:58:53 +0200
 
