--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.1.26-1) unstable; urgency=medium
+
+  * Download packages only if the system has not yet joined (Bug #36038)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 22 Oct 2014 16:05:10 +0200
+
 univention-system-setup (8.1.25-1) unstable; urgency=medium
 
   * Bug #35499: move styling from JavaScript into CSS file + cleanups
