Bug #35654: * add replacements for UCS 3.x icons * adjust styling of module title * adjust tooltip styling * use smaller buttons in the grid header * use grey colors for loading animation * minor styling adjustments for the calendar
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54833 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/debian/changelog
+++ b/management/univention-management-console-frontend-theme/debian/changelog
@@ -1,6 +1,18 @@
+univention-management-console-frontend-theme (0.0.61-1) unstable; urgency=medium
+
+  Bug #35654:
+  * add replacements for UCS 3.x icons
+  * adjust styling of module title
+  * adjust tooltip styling
+  * use smaller buttons in the grid header
+  * use grey colors for loading animation
+  * minor styling adjustments for the calendar
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 22 Oct 2014 16:32:13 +0200
+
 univention-management-console-frontend-theme (0.0.60-2) unstable; urgency=medium
 
-  * Bug #35654: fixed typo 
+  * Bug #35654: fixed typo
 
  -- Alexander Kläser <klaeser@univention.de>  Wed, 22 Oct 2014 09:12:28 +0200
 
